Refactor version comparison method to private, update application prompts locale to auto, add SQL for embedded AI configuration, enhance quick import UI with elapsed time and ETA, improve embedded AI settings management, and ensure CSV exports include BOM for proper encoding.